--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">PregnancyKotlin</string>
     <string name="phoneNumber">ارسال شماره</string>
+    <string name="register">ثبت</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_home">خانه</string>
+    <string name="title_info">پروفایل</string>
+    <string name="search">جستجو</string>
+    <string name="testTitle">بهداشت فردی در بارداری</string>
 </resources>
