start home fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,18 @@
     <string name="testTitle">بهداشت فردی در بارداری</string>
     <string name="bmi_hint">✦ وزن حتما باید قبل از هفته 12 ام بارداری باشد!</string>
     <string name="Edd_hint">✦ لطفا تاریخ اولین روز از آخرین قاعدگی خود را وارد کنید!</string>
+    <string name="test">ه گزارش"ورزش سه"این کمی پس از آن بود که محبوب ترین بازیکن پرسپولیسی ها در چند دهه گذشته اقدام به آنفالوکردن مدیرتیم پرسپولیس کرده بود. افشین پیروانی مربی و کاپیتان سابقش که مشخص نیست با کدام دلیل واقعی مورد غضب علی کریمی قرار گرفته است. نکته عجیب ماجرا انتشار مجدد استوری تند علی کریمی در صفحه مهرداد میناوند بازیکن سابق پرسپولیس و از بلاگرهای مشهور این باشگاه بود.
+این در شرایطی است که هواداران پرسپولیس و اهالی فوتبال از رفاقت گرم بین این دو چهره پرسپولیسی باخبر بودند اما با انتشار این پست در صفحه میناوند مشخص شد او راهش را از پیروانی جدا کرده و در جبهه مقابل او قرار دارد.
+
+
+این در حالی است که میناوند در تلویزیون پرسپولیس به اجرا و تفسیر بازی ها مشغول است و به نوعی از چهره های وابسته به باشگاه به شمار می آید و موضعگیری اینچنینی در شرایطی که افشین پیروانی یکی از مهره های مهم باشگاه محسوب می شود عجیب و حتی باورنکردنی است.
+
+
+جالب اینکه میناوند خود در زمانی متهم بود که برای حضور افشین پیروانی در سمت مدیریت تیم فوتبال پرسپولیس به محسن خلیلی مدیرقبلی اتهامات خیالی وارد کرده و حالا مشخص نیست چه اتفاقی رخ داده که او هم به جبهه مقابل پیروانی پیوسته است. چهره ای که سال گذشته و پس از جایگزینی به جای خلیلی به مرور توانایی و کارایی خود را در ای سمت نشان داد و در بزنگاهی مثل مسابقه پرسپولیس –سپاهان با عملکردی سختگیرانه تبدیل به یکی از عوامل مهم این برد انضباطی شد.
+
+
+
+</string>
 
     <string name="vazir">vazir.ttf</string>
 
