added profile edit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <font size="0">Text in bigger font size 20..</font>
 </string>
     <string name="error_message">مشکلی رخ داده است.لطفا اتصال خود را بررسی و مجددا تلاش کنید!</string>
+    <string name="intro">اپلیکیشن آمادگی برای زایمان، طبق دستورالعمل وزارت بهداشت، درمان و آموزش پزشکی و زیر نظر دانشگاه علوم پزشکی ایران طراحی شده و بلافاصله پس از اطلاع از بارداری قابل استفاده میباشد؛ همچنین اپلیکیشن حاضر دارای آخرین اطلاعات مربوط به اپیدمی COVID-19 در دوران بارداری، زایمان و شیردهی میباشد</string>
 </resources>
