--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="register">ثبت</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="titlealert">منابع</string>
+    <string name="dialogMessage">لیست منابع : </string>
     <string name="title_home">خانه</string>
     <string name="title_info">پروفایل</string>
     <string name="search">جستجو</string>
